--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a paragraph element. Cool huh?</p>
-<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey. I'm a big heading</h1>
+	<p>Hey. I'm a <b>paragraph</b> element. Cool huh?</p>
+	<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+	<p>My name is:<br>
+	Kitty Cat</p>
+	<img src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?cs=srgb&dl=pexels-pixabay-45201.jpg&fm=jpg">
+</body>
+</html>
