Wrote the CSS for our character's website and changed some HTML.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Mulan</title>
 	<link rel="icon" href="img/mulan-avatar.jpeg">
+	<link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
@@ -18,7 +20,7 @@
 		<h2>About Mulan</h2>
 		<p>Mulan is about a chinese female warrior who wishes to protect her father from going into war, so she takes his place as his son.</p>
 		<img src="img/mulan-big.jpeg">
-		<p>Mulan and her friends</p>
+		<p class="caption">Mulan and her friends</p>
 
 		<!-- Characteristics -->
 		<h2>Mulan's Characteristics</h2>
